[package]
name = "ubi-chain-node"
version = "0.1.0"
edition = "2021"
authors = ["@santisiri"]
description = "A Human-Verified Network for Democratic AI Access and Universal Basic Income."

[dependencies]
tokio = { version = "1.28", features = ["full"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Local dependencies
runtime = { path = "../runtime" }
rpc = { path = "../rpc" }