[package]
name = "ubi-chain-rpc"
version = "0.1.0"
edition = "2021"
authors = ["@santisiri"]
description = "RPC interface for the UBI Chain"

[dependencies]
runtime = { path = "../runtime", package = "ubi-chain-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] } 