[package]
name = "ubi-chain-rpc"
version = "0.1.0"
edition = "2021"
authors = ["@santisiri"]
description = "RPC interface for the UBI Chain"

[dependencies]
runtime = { path = "../runtime", package = "ubi-chain-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full", "test-util"] }
# Ethereum compatibility dependencies
hex = "0.4.3"
primitive-types = "0.12.1"
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core-client = "18.0.0" 
# Random number generation for address creation
rand = "0.8.5" 
log = "0.4"